## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS        = foreign
CLEANFILES              = *~ comperr config.cache config.log
MAINTAINERCLEANFILES    = configure aclocal.m4 Makefile.in

EXTRA_DIST  = ChangeLog                     \
              GenerateFileMail.pl           \
              LIESMICH.html                 \
              README.html                   \
              Readme_src                    \
              install                       \
              config.faxCAPI                \
              fritz_pic.tif                 \
              sample_AVMC4_config.faxCAPI   \
              sample_faxrcvd                \
              setupconffile	    	    \
              bin/c2faxsend                 \
              bin/c2faxrecv                 

SUBDIRS     = src
