AUTOMAKE_OPTIONS = gnu
SUBDIRS = tools src plugingui plugin drumgizmo man test
DISTDIRS = tools src plugingui plugin drumgizmo man test

EXTRA_DIST = \
	version.h \
\
	hugin/hugin.h \
	hugin/hugin.hpp \
	hugin/hugin.c \
	hugin/hugin_util.h \
	hugin/hugin_syslog.h \
	hugin/hugin_syslog.c \
	hugin/hugin_filter.h \
	hugin/hugin_filter.c \
\
	getoptpp/getoptpp.hpp \
\
	plugingui/lodepng/lodepng.h \
\
	pugixml/src/pugixml.hpp \
	pugixml/src/pugiconfig.hpp \
	pugixml/src/pugixml.cpp
